<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252422"
    tools:context=".Question2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2"
            android:textColor="#f9c80e"
            android:textSize="30sp"

            android:fontFamily="@font/poppinsregular"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="#fffcf2"
            android:textSize="20sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal"
            />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/White"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yellow"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Orange"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Green"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp">


            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="40dp"
                android:text="@string/next"
                android:textAllCaps="true"
                android:layout_gravity="bottom"
                android:textColor="#252422"
                android:background="#f9c80e"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>