<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252422"
    tools:context=".QuestiononeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1"
            android:textColor="#f9c80e"
            android:textSize="30sp"

            android:fontFamily="@font/poppinsregular"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="#fffcf2"
            android:textSize="20sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal"
            />



        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sachin"
                android:textColor="#fffcf2"
                android:textSize="18sp"
                android:buttonTint="#f9c80e"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                />

        <RadioButton
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Virat"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />

        <RadioButton
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Adam"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />

        <RadioButton
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jacques"
            android:textColor="#fffcf2"
            android:textSize="18sp"
            android:buttonTint="#f9c80e"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp">


            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="40dp"
                android:text="@string/next"
                android:textAllCaps="true"
                android:fontFamily="@font/poppinsregular"
                android:layout_gravity="bottom"
                android:textColor="#252422"
                android:background="#f9c80e"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>